--- a/juggler/modules/vapor/ChangeLog
+++ b/juggler/modules/vapor/ChangeLog
@@ -1,5 +1,8 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2003-10-28 patrickh Refactored the various I/O interfaces to reduce the number
+                    of methods.
+                    NEW VERSION: 0.30.0
 2003-10-27 allenb   Extended serial port interface.  There is now support
                     for getting/setting various terminal lines.
                     NEW VERSION: 0.29.0
