Refactor:	Renamed serial port *BufferSize methods to *MinInputSize to better reflect their use.
Approved by:	Patrick


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13741 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/ChangeLog
+++ b/juggler/modules/vapor/ChangeLog
@@ -1,5 +1,8 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2003-11-03 allenb   Renamed serial port interface methods *BufferSize to
+                    *MinInputSize to better reflect their use.
+                    NEW VERSION: 0.31.0
 2003-10-28 patrickh Refactored the various I/O interfaces to reduce the number
                     of methods.
                     NEW VERSION: 0.30.0
