--- a/juggler/modules/vapor/ChangeLog
+++ b/juggler/modules/vapor/ChangeLog
@@ -1,7 +1,10 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
-2003-11-03 allenb   Renamed serial port interface methods *BufferSize to
-                    *MinInputSize to better reflect their use.
+2003-11-04 patrickh Eliminated the I/O-related methods setOpenBlocking() and
+                    setOpenNonBlocking() in favor of just using setBlocking().
+                    NEW VERSION: 0.32.0
+2003-11-03 allenb   Renamed serial port interface methods *BufferSize() to
+                    *MinInputSize() to better reflect their use.
                     NEW VERSION: 0.31.0
 2003-10-28 patrickh Refactored the various I/O interfaces to reduce the number
                     of methods.
