Refactor:	Removed support for handling multiple versions of a single 		configuration definition.  Instead, we only hang onto the 		newest version.
Bumped version to 0.13.0 because this changes the interfaces for
jccl::ElementFactory and jccl::ConfigDefinitionRepository slightly.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13754 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/jackal/ChangeLog
+++ b/juggler/modules/jackal/ChangeLog
@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-04-2003 patrickh    Removed the storage of multiple versions of individaul
+                        configuration definitions in
+                        jccl::ConfigDefinitionRepository.
+                        NEW VERSION: 0.13.0
 Oct-15-2003 aronb       Added automatic ConfigElement upgrades using XSLT.
 Oct-10-2003 aronb       Added multiple inheritance for config element
                         definitions.
