Bug fixed:	SampleBuffers could consume all memory if device buffers were not swapped for several minutes.
This adds support for a MAX_BUFFER_SIZE parameter to the SampleBuffers template
class.  If the buffer grows to larger then this size the buffer will start
throwing away the oldest data.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13782 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/ChangeLog
+++ b/juggler/modules/gadgeteer/ChangeLog
@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-06-2003 allenb      Fixed bug with SampleBuffer that could allow memory
+                        exhaustion errors if devices are not swapped
+                        for several minutes.
+                        NEW VERSION: 0.14.1
 Oct-27-2003 allenb      Fixed bug with FOB on Linux. RTS was always high.
 Oct-12-2003 allenb      Added driver for Linux joystick devices.
 Oct-12-2003 allenb      Refactored Input interface methods startSampling,
