Refactor:	org.vrjuggler.tweek.net.corba.CorbaService.init() now 		passes all exceptions through to its caller rather than 		trying to handle them itself.  This gives the caller a 		whole lot more flexibility in how it can respond to and 		recover from errors.
Bumped version to 0.16.1.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13788 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/tweek/ChangeLog
+++ b/juggler/modules/tweek/ChangeLog
@@ -1,5 +1,9 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
+2003-11-07 patrickh    org.vrjuggler.tweek.net.corba.CorbaService.init() now
+                       passes all CORBA-related exceptions through to the
+                       caller.
+                       NEW VERSION: 0.16.1
 2003-09-19 patrickh    Removed the Emacs/Windows file chooesr open style
                        preference.  Changed the semantics of
                        GlobalPreferencesService.getChooserStartDir() to return
