Bug fixed:	The graphical editor for the Java GUI's global preferences 		was saving the wrong path information for the user's 		preferred starting directory for file choosers.  It always 		saved the absolute path instead of using the internal 		values when they would have been appropriate.
Bumped version to 0.16.2.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13810 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/tweek/ChangeLog
+++ b/juggler/modules/tweek/ChangeLog
@@ -1,5 +1,9 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
+2003-11-07 patrickh    The editor for the global preferences of the Java GUI
+                       now saves the correct value for the user's preferred
+                       starting directory for file choosers.
+                       NEW VERSION: 0.16.2
 2003-11-07 patrickh    org.vrjuggler.tweek.net.corba.CorbaService.init() now
                        passes all CORBA-related exceptions through to the
                        caller.
