Removed the constructor that takes a const char* as a parameter.  It has been a problem for a long, long time, and it (needlessly?) duplicates the functionality of the constructor that takes a const std::string&.  If it is found that the const char* version is needed for some reason, this change can always be backed out.
Bumped version to 0.32.2 just to be safe.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13863 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/ChangeLog
+++ b/juggler/modules/vapor/ChangeLog
@@ -1,5 +1,7 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2003-11-12 patrickh Removed the vpr::GUID(const char*) constructor overload.
+                    NEW VERSION: 0.32.2
 2003-11-05 patrickh Fixed a bug that prevented the termios abstraction from
                     opening ports in non-blocking mode.
                     NEW VERSION: 0.32.1
