The factory function for remote run-time reconfiguration plug-ins now takes a pointer to the Config Manager.  This is needed so that the plug-ins do not get into a deadlock state by trying to access the Config Manager singleton.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13875 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/jackal/ChangeLog
+++ b/juggler/modules/jackal/ChangeLog
@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-17-2003 patrickh    The factory function for remote run-time
+                        reconfiguration plug-ins now take a parameter that is
+                        of type jccl::ConfigManager*.
+                        NEW VERSION: 0.15.0
 Nov-09-2003 patrickh    Refactored the CORBA-based remote run-time
                         reconfiguration code so that it can be loaded at
                         run-time as a plug-in.
