--- a/modules/sonix/ChangeLog
+++ b/modules/sonix/ChangeLog
@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-27-2003 patrickh    Rewrote the build system.
 Jul-24-2003 browner     Added the audiere plugin.  this required the
                         modification of the SoundInfo struct for a streaming
                         flag - which means we now support streaming apis
