--- a/modules/sonix/ChangeLog
+++ b/modules/sonix/ChangeLog
@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-29-2003 chooze      Removed XDL in favor of using vpr::Library.
+                        NEW VERSION: 0.3.0
 Nov-27-2003 patrickh    Moved the plug-in code from snx/plugins into plugins
                         and gave the plug-ins their own build system.
 Nov-27-2003 patrickh    Rewrote the build system.
