Refactor:	Instead of requiring that the plug-ins define an entry 		point function named deletePlugin(), what I think is a 		more elegant mechanism that employes the template method 		pattern.
This adds a pure virtual function to snx::ISoundImplementation called
destroy().  This is the same mechanism used to delete device driver
and ClusterJuggler plug-ins, and it is based on a design by Chad Austin.

Bumped version to 0.4.0.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13974 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/sonix/ChangeLog
+++ b/juggler/modules/sonix/ChangeLog
@@ -1,5 +1,10 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Dec-01-2003 patrickh    Removed the deletePlugin() function from the required
+                        list of entry points a Sonix plug-in must implement.
+                        Now, snx::ISoundImplementation defines a pure virtual
+                        destroy() method that must be implemented.
+                        NEW VERSION: 0.3.0
 Nov-29-2003 chooze      Removed XDL in favor of using vpr::Library.
                         NEW VERSION: 0.3.0
 Nov-27-2003 patrickh    Moved the plug-in code from snx/plugins into plugins
