Initial support for using PyORBit 2 and Fnorb as alternatives to omniORBpy. At this time, PyORBit does not appear to have the CosNaming namespace, so that is a showstopper for its use.  (I didn't test it very hard, though.) Fnorb's POA support is new as of a week ago, so it may still not be ready to be used as a replacement for omniORBpy.  It is coming along, though. Because of these deficiencies, neither will be documented as viable Python CORBA implementations, but I will keep my eye on their development.  I suspect that Fnorb will be usable soon.
I have also added two new configure options:

   --with-python-orb-root: The root directory of the Python ORB
                           installation.
    --with-python-orb-lib: The directory containing all the interesting
                           code for the Python ORB.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14024 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/tweek/ChangeLog
+++ b/juggler/modules/tweek/ChangeLog
@@ -1,5 +1,7 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
+2003-12-08 patrickh    Initial support for using Fnorb or PyORBit 2 as
+                       alternatives to omniORBpy.  This work is not yet done.
 2003-11-07 patrickh    The editor for the global preferences of the Java GUI
                        now saves the correct value for the user's preferred
                        starting directory for file choosers.
