Bug Fixed:	CondVarPosix::wait() did not use timeout value correctly.
This bug is now fixed and the method returns timeout status correctly.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14151 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/ChangeLog
+++ b/juggler/modules/vapor/ChangeLog
@@ -1,5 +1,9 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2004-01-15 allenb   Fixed bug in CondVarPosix::wait() where wait time was not
+                    being taken into account correctly.  This method also now
+                    returns timeouts correctly.
+                    NEW VERSION: 0.32.4
 2004-01-10 allenb   Changed Mutex::test() method to be const.
                     NEW VERSION: 0.32.3
 2003-11-12 patrickh Removed the vpr::GUID(const char*) constructor overload.
