Refactored:	MutexPosix on Linux now uses error checking mutex attributes
This should allow for error output in the case of recursive locking or when a non-owning thread unlocks a mutex.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14155 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/ChangeLog
+++ b/juggler/modules/vapor/ChangeLog
@@ -1,5 +1,8 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2004-01-15 allenb   Refactored MutexPosix to use an error checking mutex on
+                    Linux when compiled debug.
+                    NEW VERSION: 0.32.5
 2004-01-15 allenb   Fixed bug in CondVarPosix::wait() where wait time was not
                     being taken into account correctly.  This method also now
                     returns timeouts correctly.
