Updated to require an *installed* version of Boost 1.31.0 (or one of the 1.31.0 release candidates since 1.31.0 has not been released officially yet).  With this change, we can finally stop building the Boost.Filesystem library into VPR.  Instead, we link against the version compiled as part of installing Boost.
Bumped version to 0.33.0 to mark this major change.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14223 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/ChangeLog
+++ b/juggler/modules/vapor/ChangeLog
@@ -1,5 +1,8 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2004-01-27 patrickh Updated to require an installed build of Boost 1.31.0.
+                    Boost.Filesystem is no longer compiled into VPR.
+                    NEW VERSION: 0.33.0
 2004-01-15 allenb   Refactored MutexPosix to use an error checking mutex on
                     Linux when compiled debug.
                     NEW VERSION: 0.32.5
