Added test() method to cond var
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14277 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/ChangeLog
+++ b/juggler/modules/vapor/ChangeLog
@@ -1,5 +1,7 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2004-02-02 allenb   Added test() method to condition variables.
+                    NEW VERSION: 0.34.1
 2004-01-28 patrickh Updated to require an installed build of CppDOM.  This
                     library is no longer compiled into VPR.
                     NEW VERSION: 0.34.0
