--- a/modules/gadgeteer/ChangeLog
+++ b/modules/gadgeteer/ChangeLog
@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Feb-05-2004 patrickh    gadget::DigitalProxy::getData() now returns a
+                        gadget::Digital::State.
+                        NEW VERSION: 0.14.2
 Nov-11-2003 allenb      Complete rewrite of flock standalone driver.
                         The new driver is much more stable and has many new
                         abilities. (including auto detection of the setup)
